--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 <body onload="init()">
 
+    <div class="background">
+    </div>
     <header>
         <h1>My Pokédex</h1>
         <div class="input-group mb-3">
@@ -28,10 +30,8 @@
                 id="clearSerchBar">X</button>
         </div>
     </header>
-
-    <div class="background">
-    </div>
     <section id="pokemon-list" class="content"></section>
+    <footer class="footer"></footer>
 
 </body>
 
