--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         </div>
     </header>
     <section id="pokemon-list" class="content"></section>
-    <footer class="footer"></footer>
+    <div class="load-more">
+        <button id="loadMoreButton" class="btn btn-primary" style="display: none;" onclick="loadMore()">Load More Pokémon</button>
+    </div>
 
 </body>
 
