added card backside

--- a/index.html
+++ b/index.html
@@ -20,19 +20,15 @@
     </div>
     <header>
         <h1>My Pokédex</h1>
-        <div class="input-group mb-3">
-            <input id="search" oninput="filterPokemon()" onkeydown="keyCode(event)" onchange="filterPokemon()"
-                type="text" class="form-control" placeholder="Search your Pokemon" aria-label="Search your"
-                aria-describedby="button-addon2">
-            <button onclick="filterPokemon()" onkeydown="search(this)" class="btn btn-outline-secondary" type="button"
-                id="searchButton">Search</button>
-            <button onclick="clearSearchbar()" class="btn btn-outline-secondary" type="button"
-                id="clearSerchBar">X</button>
-        </div>
+        <form class="input-group mb-3 flex-center">
+            <input onkeyup="searchAndSuggestPokemon()" id="search"
+            type="text" pattern="/[A-Za-z\s]+/" class="form-control search-pokemon" placeholder="Search your Pokemon">
+        </form>
     </header>
     <section id="pokemon-list" class="content"></section>
+    <div id="background-blur" class="background-blur"></div>
     <div class="load-more">
-        <button id="loadMoreButton" class="btn btn-primary" style="display: none;" onclick="loadMore()">Load More Pokémon</button>
+        <button id="loadMoreButton" class="btn btn-danger" style="display: none;" onclick="loadMore()">Load More Pokémon</button>
     </div>
 
 </body>
