--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="scripts/script.js"></script>
+    <script src="scripts/eventListener.js"></script>
     <script src="scripts/html.js"></script>
     <script src="scripts/chart.js"></script>
     <link rel="shortcut icon" href="img/3.svg" type="image/x-icon">
