added scroll button and scroll fix

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </div>
     </header>
     <section id="pokemon-list" class="content"></section>
+    <button id="scrollToTopButton" onclick="scrollToTop()" style="display: none; position: fixed; z-index: 1000;">↑</button>
     <div id="background-blur" class="background-blur"></div>
     <div class="load-more">
         <button id="loadMoreButton" class="btn btn-danger" style="display: none;" onclick="loadMore()">Load More Pokémon</button>
