--- a/index.html
+++ b/index.html
@@ -1,50 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokédex</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="scripts/script.js"></script>
+    <script src="scripts/species.js"></script>
+    <script src="scripts/loadPokemon.js"></script>
+    <script src="scripts/tabs.js"></script>
+    <script src="scripts/background.js"></script>
+    <script src="scripts/navigatePokemon.js"></script>
     <script src="scripts/eventListener.js"></script>
+    <script src="scripts/evolution.js"></script>
+    <script src="scripts/search.js"></script>
     <script src="scripts/html.js"></script>
     <script src="scripts/chart.js"></script>
-    <link rel="shortcut icon" href="img/3.svg" type="image/x-icon">
-</head>
+    <link rel="shortcut icon" href="img/3.svg" type="image/x-icon" />
+  </head>
 
-<body onload="init()">
-
-    <div class="background">
-    </div>
+  <body onload="init()">
+    <div class="background"></div>
     <header>
-        <h1>My Pokédex</h1>
-        <form class="input-group mb-3 flex-center">
-            <input onkeyup="searchAndSuggestPokemon()" id="search"
-            type="text" pattern="/[A-Za-z\s]+/" class="form-control search-pokemon" placeholder="Search your Pokémon">
-        </form>
-        <div id="type-filter" class="type-filter">
-            <button onclick="toggleFilterMenu()">Filter</button>
-            <div id="type-options" class="type-options" style="display: none;">
-                ${Object.keys(typeColors).map(type => `
-                    <label>
-                        <input type="checkbox" name="type" value="${type}" onchange="filterByType()">
-                        ${type.charAt(0).toUpperCase() + type.slice(1)}
-                    </label>
-                `).join('')}
-            </div>
+      <h1>My Pokédex</h1>
+      <form class="input-group mb-3 flex-center">
+        <input
+          onkeyup="searchAndSuggestPokemon()"
+          id="search"
+          type="text"
+          pattern="/[A-Za-z\s]+/"
+          class="form-control search-pokemon"
+          placeholder="Search your Pokémon"
+        />
+      </form>
+      <div id="type-filter" class="type-filter">
+        <button onclick="toggleFilterMenu()">Filter</button>
+        <div id="type-options" class="type-options" style="display: none">
+          ${Object.keys(typeColors).map(type => `
+          <label>
+            <input
+              type="checkbox"
+              name="type"
+              value="${type}"
+              onchange="filterByType()"
+            />
+            ${type.charAt(0).toUpperCase() + type.slice(1)}
+          </label>
+          `).join('')}
         </div>
+      </div>
     </header>
     <section id="pokemon-list" class="content"></section>
-    <button id="scrollToTopButton" onclick="scrollToTop()" style="display: none; position: fixed; z-index: 1000;">↑</button>
+    <button
+      id="scrollToTopButton"
+      onclick="scrollToTop()"
+      style="display: none; position: fixed; z-index: 1000"
+    >
+      ↑
+    </button>
     <div id="background-blur" class="background-blur"></div>
     <div class="load-more">
-        <button id="loadMoreButton" class="btn btn-danger" style="display: none;" onclick="loadMore()">Load More Pokémon</button>
+      <button
+        id="loadMoreButton"
+        class="btn btn-danger"
+        style="display: none"
+        onclick="loadMore()"
+      >
+        Load More Pokémon
+      </button>
     </div>
-
-</body>
-
+  </body>
 </html>
