--- a/index.html
+++ b/index.html
@@ -76,5 +76,8 @@
         Load More Pokémon
       </button>
     </div>
+    <div id="dialog" class="d-none">
+      <div id="loader"></div>
+    </div>
   </body>
 </html>
