--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="scripts/species.js"></script>
     <script src="scripts/loadPokemon.js"></script>
     <script src="scripts/tabs.js"></script>
+    <script src="scripts/input.js"></script>
     <script src="scripts/background.js"></script>
     <script src="scripts/navigatePokemon.js"></script>
     <script src="scripts/eventListener.js"></script>
