--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="scripts/search.js"></script>
     <script src="scripts/html.js"></script>
     <script src="scripts/chart.js"></script>
-    <link rel="shortcut icon" href="img/3.svg" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/pokeball.png" type="image/x-icon" />
   </head>
 
   <body onload="init()">
