--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <body onload="init()">
     <div class="background"></div>
-    <header>
+    <div class="main-page"><header>
       <h1>My Pokédex</h1>
       <form class="input-group mb-3 flex-center">
         <input
@@ -81,4 +81,7 @@
       <div id="loader"></div>
     </div>
   </body>
+  <footer id="footer">
+    <h3>Pokédex created by Steven Schulze</h3>
+</footer></div>
 </html>
